cluster/apps/networking-system/external/adguard/endpoints.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.26.1-standalone-strict/endpoints-v1.json
apiVersion: v1
kind: Endpoints
metadata:
  name: adguard
subsets:
  - addresses:
      - ip: 10.5.0.2
    ports:
      - name: http
        port: 80
        protocol: TCP
