cluster/apps/networking-system/external/adguard/ingress-traefikCRD.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/traefik.containo.us/ingressroute_v1alpha1.json
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: adguard
  labels:
    app.kubernetes.io/name: adguard
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`adguard.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: secure-headers
        - name: local-only
      services:
        - name: adguard
          port: 81
          namespace: networking-system
  tls:
    secretName: ${SECRET_DOMAIN_0//./-}-prod-tls
