cluster/apps/networking-system/external/adguard/ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.26.1-standalone-strict/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  labels:
    app.kubernetes.io/name: adguard
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: |
      10.244.0.0/16,10.10.0.0/24,10.0.8.0/24,192.168.10.0/24,192.168.200.0/24
spec:
  ingressClassName: nginx
  rules:
    - host: &host adguard.${SECRET_DOMAIN_0}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard
                port:
                  number: 81
  tls:
    - hosts:
        - *host
      secretName: ${SECRET_DOMAIN_0//./-}-prod-tls
